force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Campaign__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>