force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Is_Public__c</fullName>
    <label>Is Public</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>