force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Number_Members__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Number_Members__c</fullName>
    <label>Number Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>