force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Team_Comments__c</fullName>
    <label>Team Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>