force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Team_Name_Alt__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Team_Name_Alt__c</fullName>
    <label>Team Name Alt</label>
    <length>150</length>
    <type>Text</type>
</CustomField>