force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Team_Photo__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Team_Photo__c</fullName>
    <label>Team Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>