force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Team_Target__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Team_Target__c</fullName>
    <label>Team Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>