force-app/main/default/objects/Funraisin__Team__c/fields/Funraisin__Team_Url__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Team_Url__c</fullName>
    <label>Team Url</label>
    <type>Url</type>
</CustomField>